# winagent

./: .gitignore  CMakeLists.txt  README.md  config.ini  main.cpp  openssl.cnf
certs/: README.md
dashboards/default/: data-handler.js  default.css  index.html  local-actions.js
include/: BaseMonitor.h  BasePlugin.h  Dashboard.h  DashboardData.h  DashboardServer.h  DashboardWebSocketServer.h  Logger.h  MainWindow.h  ModuleFactory.h  NetworkReporter.h  PluginCardWidget.h  PluginManager.h  PluginOverviewWidget.h
include/modules/: AudezeMonitor.h  AudioDeviceMonitor.h  AudioDeviceSwitcher.h  AudioMonitor.h  CPUMonitor.h  LauncherMonitor.h  MediaMonitor.h  MemoryMonitor.h  NetworkBytes.h  NetworkMonitor.h  ProcessMonitor.h
plugins/: CMakeLists.txt  README.md
plugins/audezemaxwell/: CMakeLists.txt  Plugin.cpp  config.json
plugins/audezemaxwell/src/: AudezeMaxwellUi.cpp  AudezeMaxwellUi.h  AudezeSampler.cpp  AudezeSampler.h
plugins/audiodevices/: CMakeLists.txt  Plugin.cpp  config.json
plugins/audiodevices/src/: AudioDevices.cpp  AudioDevices.h  AudioDevicesUi.cpp  AudioDevicesUi.h
plugins/basiccpu/: CMakeLists.txt  Plugin.cpp
plugins/basiccpu/src/: BasicCpuUi.cpp  BasicCpuUi.h  CpuSampler.cpp  CpuSampler.h
plugins/basicmemory/: CMakeLists.txt  Plugin.cpp  config.json
plugins/basicmemory/src/: BasicMemoryUi.cpp  BasicMemoryUi.h  RamSampler.cpp  RamSampler.h
plugins/basicnetwork/: CMakeLists.txt  Plugin.cpp  config.json
plugins/basicnetwork/src/: BasicNetworkUi.cpp  BasicNetworkUi.h  NetworkSampler.cpp  NetworkSampler.h
plugins/dummy/: CMakeLists.txt  Plugin.cpp  config.json
plugins/dummy/src/: DummySampler.cpp  DummySampler.h  RingLog.cpp  RingLog.h  Utils.h
plugins/launcher/: CMakeLists.txt  Plugin.cpp  config.json
plugins/launcher/src/: Launcher.cpp  Launcher.h  LauncherUi.cpp  LauncherUi.h
plugins/media/: CMakeLists.txt  Plugin.cpp  config.json
plugins/media/src/: MediaMonitor.cpp  MediaMonitor.h  MediaUi.cpp  MediaUi.h
plugins/volumemixer/: CMakeLists.txt  Plugin.cpp  config.json
plugins/volumemixer/src/: MixerMonitor.cpp  MixerMonitor.h  VolumeMixerUi.cpp  VolumeMixerUi.h
src/: BasePlugin.cpp  DashboardServer.cpp  DashboardWebSocketServer.cpp  MainWindow.cpp  NetworkReporter.cpp  PluginCardWidget.cpp  PluginManager.cpp  PluginOverviewWidget.cpp
src/modules/: AudezeMonitor.cpp  AudioDeviceMonitor.cpp  AudioDeviceSwitcher.cpp  AudioMonitor.cpp  CPUMonitor.cpp  LauncherMonitor.cpp  MediaMonitor.cpp  MemoryMonitor.cpp  NetworkBytes.cpp  NetworkMonitor.cpp  ProcessMonitor.cpp
test/: AdvancedTests.h  BaseMonitorTest.cpp  DummyMonitor.h  ExceptionMonitor.h
